--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1"
+        "tailwindcss": "^2.0.1",
+        "tailwindcss-spinner": "^1.2.0"
     },
     "dependencies": {
         "sweetalert2": "^10.15.5"
