--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "tailwindcss-spinner": "^1.2.0"
     },
     "dependencies": {
+        "flatpickr": "^4.6.9",
         "sweetalert2": "^10.15.5"
     }
 }
