--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
+        "tailwind-scrollbar": "^1.3.0",
         "tailwindcss": "^2.0.1",
         "tailwindcss-spinner": "^1.2.0"
     },
